Wed Sep 08 16:24:44 BST 2004  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: replace_doc -> replace_doc1; added new test
	  replace_doc2 to test using replace_doc to add a document with
	  a specified docid.

Wed Sep 08 16:23:50 BST 2004  Olly Betts <olly@survex.com>

	* backends/inmemory/inmemory_database.h: Removed unused member
	  variable "indexing".

Wed Sep 08 16:14:47 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: If replace_document() is used
	  to add a document with did greater than lastdocid, raise lastdocid
	  so future calls to add_document() won't clash.

Wed Sep 08 16:13:51 BST 2004  Olly Betts <olly@survex.com>

	* backends/inmemory/inmemory_database.cc: Fixed bug
	  Database::replace_document() to work with a document id greater
	  than lastdocid.

Wed Sep 08 05:10:01 BST 2004  Olly Betts <olly@survex.com>

	* common/utils.h: The latest fcntl.h dance causes a compile error on
	  mingw, so don't use it there.

Wed Sep 08 03:38:20 BST 2004  Olly Betts <olly@survex.com>

	* common/utils.h: Use a namespace as an extra step in the Sun fcntl
	  open64 dance.

Tue Sep 07 02:33:50 BST 2004  Olly Betts <olly@survex.com>

	* tests/test.da: Another cruft file removed.

Tue Sep 07 02:21:49 BST 2004  Olly Betts <olly@survex.com>

	* tests/btreetest.cc,tests/quartztest.cc: Moved overwrite1 from
	  quartztest to btreetest.  Added const in a few places.

Tue Sep 07 02:07:43 BST 2004  Olly Betts <olly@survex.com>

	* tests/quartztest.cc: Removed overwrite2 test.  Digging back in CVS
	  it's been disabled since the day after it added.  After all this
	  time it's hard to guess exactly what it was intended to test, so
	  just removing it seems simplest.  We already have overwrite1 to test
	  getting DatabaseModifiedError.

Tue Sep 07 01:52:25 BST 2004  Olly Betts <olly@survex.com>

	* tests/btreetest.cc: Cleaned up paths to temporary Btrees.

Mon Sep 06 17:51:27 BST 2004  Olly Betts <olly@survex.com>
